--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,5 @@ Games:
  - no of downloads your pod get
  
 email notifications of new pod uploads
+
+/usersPage/ to view public profiles -> gravatar
