--- a/todo.txt
+++ b/todo.txt
@@ -20,16 +20,14 @@ Fandoc:
 TODO
 ====
 
-Breadcrumbs on User / user edit pages
-
-on mypods table, show / highlight public / private pods
-
 users to have a gravatar email field (defaults to normal)
  - grab default details from gravatar (when save grav email field is diff and fields to be populated are empty)
 
 use icons / ogimages from pods
  
 /usersPage/ to view public profiles -> gravatar
+
+google anal
 
 Sitemap.xml
 
@@ -40,6 +38,16 @@ Email errors
 favicons
 
 site logo
+
+help pages
+
+pod summary pages
+
+front page
+
+user page
+
+page titles
 
 
 Future
