--- a/todo.txt
+++ b/todo.txt
@@ -25,8 +25,7 @@ page titles
 user page
  - list pods published
 
-Sitemap.xml
-
+add atom feed links + autodiscovery
 Atom feeds
 
 site logo
@@ -41,6 +40,7 @@ User activity Data
 
 Show contact email address:
 	help.me@fantomfactory.org
+
 
 
 Future
